5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_1583.log
== SUBMITION (2019-05-24 03:35:12) 
-- CODE:
s=str(num(input("Digite: ")))
-- EXECUTION TIME:
0.171339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 03:35:15) 
-- CODE:
s=str(num(input("Digite: ")))
-- EXECUTION TIME:
0.119464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:15) 
-- CODE:
s=str(num(input("Digite: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:18) 
-- CODE:
s=str(num(input("Digite: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:32) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:35:33) 
-- CODE:
s=str(input("Digite: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:37:16) 
-- CODE:
num=int(input("Digite: "))
str(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=str(num(input()))
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 03:37:16) 
-- CODE:
num=int(input("Digite: "))
str(num)
-- EXECUTION TIME:
0.160171
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
Digite:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:41:49) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num[0:2],".",num[3:5],".",num[6:8])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(num[0:2],".",num[3:5],".",num[6:8])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:43:36) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num[0:2]"."num[3:5]"."num[6:8])
-- ERROR:
File "XXXX", line 3
    print(num[0:2]"."num[3:5]"."num[6:8])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:44:14) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:44:44) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num[0:.])
-- ERROR:
File "XXXX", line 3
    print(num[0:.])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:44:55) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num[0:3:.])
-- ERROR:
File "XXXX", line 3
    print(num[0:3:.])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 03:45:07) 
-- CODE:
num=int(input("Digite: "))
str(num)
print(num[0:3:"."])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(num[0:3:"."])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:04:51) 
-- CODE:
from numpy import*
num = input("num")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(num)):
	if(i < (len(num)-4)):
		tri = tri + num[i:j] + p
	else:
		tri = tri + num[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- EXECUTION TIME:
0.415954
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
